<resources>
	<string name="app_picker_name">Applications</string>
	<string name="bookmark_picker_name">Bookmarks</string>
	<string name="button_add_calendar">Add to calendar</string>
	<string name="button_add_contact">Add contact</string>
	<string name="button_back">Back</string>
	<string name="button_book_search">Book Search</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_clipboard_empty">Clipboard empty</string>
	<string name="button_custom_product_search">Custom search</string>
	<string name="button_dial">Dial number</string>
	<string name="button_done">Done</string>
	<string name="button_email">Send email</string>
	<string name="button_get_directions">Get directions</string>
	<string name="button_google_shopper">Google Shopper</string>
	<string name="button_mms">Send MMS</string>
	<string name="button_ok">OK</string>
	<string name="button_open_browser">Open browser</string>
	<string name="button_product_search">Product Search</string>
	<string name="button_read_book">Browse book</string>
	<string name="button_search_book_contents">Search contents</string>
	<string name="button_share_app">Application</string>
	<string name="button_share_bookmark">Bookmark</string>
	<string name="button_share_by_email">Share via email</string>
	<string name="button_share_by_sms">Share via SMS</string>
	<string name="button_share_clipboard">Clipboard</string>
	<string name="button_share_contact">Contact</string>
	<string name="button_show_map">Show map</string>
	<string name="button_sms">Send SMS</string>
	<string name="button_web_search">Web search</string>
	<string name="button_wifi">Connect to Network</string>
	<string name="contents_contact">Contact info</string>
	<string name="contents_email">Email address</string>
	<string name="contents_location">Geographic coordinates</string>
	<string name="contents_phone">Phone number</string>
	<string name="contents_sms">SMS address</string>
	<string name="contents_text">Plain text</string>
	<string name="history_clear_text">Clear history</string>
	<string name="history_email_title">Barcode Scanner history</string>
	<string name="history_send">Send history</string>
	<string name="history_title">History</string>
	<string name="menu_about">About</string>
	<string name="menu_help">Help</string>
	<string name="menu_history">History</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_share">Share</string>
	<string name="msg_about">The official Android app of the open source ZXing
		barcode project.</string>
	<string name="msg_buggy">This device has known bugs that cause barcode
		scanning problems. For more information, visit
		http://code.google.com/p/zxing/wiki/FrequentlyAskedQuestions</string>
	<string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
	<string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem.
		You may need to restart the device.</string>
	<string name="msg_default_contents">Contents</string>
	<string name="msg_default_format">Format</string>
	<string name="msg_default_meta">Metadata</string>
	<string name="msg_default_mms_subject">Hi</string>
	<string name="msg_default_status">Place a barcode inside the viewfinder rectangle to
		scan it.</string>
	<string name="msg_default_time">Time</string>
	<string name="msg_default_type">Type</string>
	<string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
	<string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.
	</string>
	<string name="msg_google_shopper_missing">Google Shopper is not installed</string>
	<string name="msg_install_google_shopper">Google Shopper combines barcode scanning with
		online and local prices, reviews and more without opening the browser.
		Would you like to try it?</string>
	<string name="msg_intent_failed">Sorry, the requested application could not be
		launched. The barcode contents may be invalid.</string>
	<string name="msg_loading_apps">Loading list of applications\u2026</string>
	<string name="msg_not_our_results">You are leaving this application. The search
		results you will see are not related to this application.</string>
	<string name="msg_redirect">Redirect</string>
	<string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
	<string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
	<string name="msg_sbc_no_page_returned">No page returned</string>
	<string name="msg_sbc_page">Page</string>
	<string name="msg_sbc_searching_book">Searching book\u2026</string>
	<string name="msg_sbc_snippet_unavailable">Snippet not available</string>
	<string name="msg_sbc_unknown_page">Unknown page</string>
	<string name="msg_share_explanation">You can share data by displaying a barcode on your
		screen and scanning it with another phone.</string>
	<string name="msg_share_subject_line">Here are the contents of a barcode I scanned
	</string>
	<string name="msg_share_text">Or type some text and press Enter</string>
	<string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
	<string name="preferences_actions_title">When a barcode is found\u2026</string>
	<string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
	<string name="preferences_bulk_mode_title">Bulk scan mode</string>
	<string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
	<string name="preferences_custom_product_search_summary"
		formatted="false">Use %s as a placeholder for the product ID, and %f for
		format</string>
	<string name="preferences_custom_product_search_title">Custom search URL</string>
	<string name="preferences_decode_1D_title">1D barcodes</string>
	<string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
	<string name="preferences_decode_QR_title">QR Codes</string>
	<string name="preferences_front_light_summary">Improves scanning in low light on some phones, but
		may cause glare. Does not work on all phones.</string>
	<string name="preferences_front_light_title">Use front light</string>
	<string name="preferences_general_title">General settings</string>
	<string name="preferences_name">Settings</string>
	<string name="preferences_play_beep_title">Beep</string>
	<string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History
	</string>
	<string name="preferences_remember_duplicates_title">Remember duplicates</string>
	<string name="preferences_reverse_image_summary">Enable on devices with a front camera only</string>
	<string name="preferences_reverse_image_title">Reversed camera image</string>
	<string name="preferences_result_title">Result settings</string>
	<string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
	<string name="preferences_supplemental_summary">Try to retrieve more information about the barcode
		contents</string>
	<string name="preferences_supplemental_title">Retrieve more info</string>
	<string name="preferences_vibrate_title">Vibrate</string>
	<string name="result_address_book">Found contact info</string>
	<string name="result_calendar">Found calendar event</string>
	<string name="result_email_address">Found email address</string>
	<string name="result_geo">Found geographic coordinates</string>
	<string name="result_isbn">Found book</string>
	<string name="result_product">Found product</string>
	<string name="result_sms">Found SMS address</string>
	<string name="result_tel">Found phone number</string>
	<string name="result_text">Found plain text</string>
	<string name="result_uri">Found URL</string>
	<string name="result_wifi">Found WLAN Configuration</string>
	<string name="sbc_name">Google Book Search</string>
	<string name="share_name">Share via barcode</string>
	<string name="title_about">Barcode Scanner v</string>
	<string name="wa_name">WLAN Connection</string>
	<string name="wifi_changing_network">Changing Network</string>
	<string name="wifi_connected">Connected</string>
	<string name="wifi_creating_network">Creating Network</string>
	<string name="wifi_modifying_network">Modifying Network</string>
	<string name="wifi_ssid_missing">Network name missing</string>
	<string name="wifi_type_incorrect">Network type incorrect</string>
	<string name="wifi_connect_failed">Network connection failed</string>
	<string name="wifi_ssid_label">Network Name</string>
	<string name="wifi_type_label">Type</string>
	<string name="zxing_url">http://code.google.com/p/zxing</string>
	<string name="hello">hello ipay</string>
	<string name="app_name">iPay</string>
	<string name="login_text_username">账户</string>
	<string name="login_text_password">密码</string>
	<string name="login_button_login">登录</string>
	<string name="login_text_learn_more">了解更多</string>
	<string name="login_text_null_username_or_password">用户名或密码为空</string>
	<string name="login_text_status_logining">登录中...</string>
	<string-array name="home_menu_array">
		<item>商场介绍</item>
		<item>热卖商品</item>
		<item>特价商品</item>
		<item>快速扫描</item>
		<item>消费历史</item>
	</string-array>
	<string name="home_guide">享受精彩购物生活，从这里开始!</string>
	<string name="home_search_hint">你在找什么</string>
	<string name="shopping_cart_pay">支付</string>
	<string name="shopping_cart_money">总金额：</string>
	<string name="shopping_cart_refresh">刷新</string>
	<string name="shopping_cart_clear">清空</string>
	<string name="shopping_cart_quantity">总商品数：</string>
	<string name="shopping_cart_currency_unit">元</string>
	<string name="shopping_cart_pay_title">结算</string>
	<string name="shopping_cart_pay_will_pay">您将为购物车中的商品支付：</string>
	<string name="shopping_cart_enter_pin">请输入支付密码!</string>
	<string name="shopping_cart_pay_sure">确定</string>
	<string name="shopping_cart_pay_cancel">取消</string>
	<string name="shopping_cart_pay_pin_null">支付密码不能为空，请重试</string>
	<string name="shopping_cart_pay_success">支付成功</string>
	<string name="shopping_cart_pay_fail">支付失败</string>
	<string name="market_info_name">名称</string>
	<string name="market_info_location">地址</string>
	<string name="market_info_intro">简介</string>
	<string name="market_info_service_phone">服务电话</string>
	<string name="market_info_complain_phone">投诉电话</string>
	<string name="market_info_create_date">注册时间</string>
	<string name="goods_info_name">名称：</string>
	<string name="goods_info_price">单价: </string>
	<string name="goods_info_quantity">数量: </string>
	<string name="goods_info_producer">生产商: </string>
	<string name="goods_info_intro">简介: </string>
	<string name="goods_info_add_to_cart">装入购物车</string>
	<string name="goods_info_remove">移除</string>
	<string name="goods_info_add_success">添加成功</string>
	<string name="goods_info_add_fail">添加失败</string>
	<string name="goods_info_get_success">获取成功</string>
	<string name="goods_info_get_fail">获取失败</string>
	<string name="account_basic_info">基本信息</string>
	<string name="account_name">姓名：</string>
	<string name="account_account">帐号：</string>
	<string name="account_phone_num">电话：</string>
	<string name="account_see_history">查看交易历史</string>
	<string name="account_modify_account">修改账户资料</string>
	<string name="account_see_money">查看账户余额</string>
	<string name="account_get_fail">获取账户信息失败</string>
	<string name="modify_account_info_basic">修改基本信息</string>
	<string name="modify_account_info_account">帐号：</string>
	<string name="modify_account_info_phone_num">电话：</string>
	<string name="modify_account_info_pass">修改密码</string>
	<string name="modify_account_info_old_pass">旧密码：</string>
	<string name="modify_account_info_new_pass">新密码：</string>
	<string name="modify_account_info_new_pass_again">确认：</string>
	<string name="modify_account_info_submit">提交</string>
	<string name="modify_account_info_cancel">取消</string>
	<string name="menu_bar_item_home">首页</string>
	<string name="menu_bar_item_scanner">Scanner</string>
	<string name="menu_bar_item_cart">购物车</string>
	<string name="menu_bar_item_account">账户</string>
	<string name="menu_bar_item_more">更多</string>
</resources>