<?xml version="1.0" encoding="utf-8"?>
<TabHost
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@android:id/tabhost">
	<LinearLayout
		android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
	
  		<!-- Content -->
		<FrameLayout 
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="0.0dip"
			android:layout_weight="1.0"/>
		
		<TabWidget 
			android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"	
			android:visibility="gone"		
		/>
		<RadioGroup 
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:gravity="center_vertical"
			android:layout_gravity="bottom"
			android:orientation="horizontal"
			android:id="@+id/test_menu_bar"
			android:background="@drawable/menu_bar_bg">
		<RadioButton 
			android:id="@+id/radio_button0"
			android:tag="radio_button0"
			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:layout_weight="1.0"
			android:layout_marginTop="1.0dip"
			android:text="@string/menu_bar_item_home"
			android:drawableTop="@drawable/btn_menu_bar_more"
			android:button="@null"
			style="@style/menu_bar_button"
			/>
			<RadioButton 
			android:id="@+id/radio_button1"
			android:tag="radio_button1"
			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:layout_weight="1.0"
			android:layout_marginTop="1.0dip"
			android:text="@string/menu_bar_item_cart"
			android:drawableTop="@drawable/btn_menu_bar_more"
			android:button="@null"
			style="@style/menu_bar_button"
			/>
			<RadioButton 
			android:id="@+id/radio_button2"
			android:tag="radio_button2"
			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:layout_weight="1.0"
			android:layout_marginTop="1.0dip"
			android:text="@string/menu_bar_item_scanner"
			android:button="@null"
			android:drawableTop="@drawable/btn_menu_bar_more"
			style="@style/menu_bar_button"
			/>
			<RadioButton 
			android:id="@+id/radio_button3"
			android:tag="radio_button3"
			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:layout_weight="1.0"
			android:layout_marginTop="1.0dip"
			android:text="@string/menu_bar_item_account"
			android:button="@null"
			android:drawableTop="@drawable/btn_menu_bar_more"
			style="@style/menu_bar_button"
			/>
			<RadioButton 
			android:id="@+id/radio_button4"
			android:tag="radio_button4"
			android:layout_width="fill_parent"
  			android:layout_height="fill_parent"
  			android:layout_weight="1.0"
			android:layout_marginTop="1.0dip"
			android:text="@string/menu_bar_item_more"
			android:button="@null"
			android:drawableTop="@drawable/btn_menu_bar_more"
			style="@style/menu_bar_button"
			/>
		</RadioGroup>
	</LinearLayout> 
</TabHost>
