<?xml version="1.0" encoding="utf-8"?>

<!-- 商品信息页面 -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
  
	<!-- 顶部菜单栏 -->
	<include layout="@layout/navi_bar_back"/>
	  
	<ScrollView 
		android:background="#EEE"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
		<LinearLayout 
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent">
			<!-- 商品名称 -->
			<TextView
				android:id="@+id/goods_info_title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dip"
				android:textStyle="bold"
				android:textSize="20sp"
			/>
					
			<ImageView
				android:layout_width="fill_parent"
				android:layout_marginBottom="5dp"
				android:layout_height="wrap_content"
				android:src="@drawable/bg_thick_divider_3d"
			/>	
			<!-- 商品图片 -->
			<ImageView 
				android:id="@+id/goods_info_image"
				android:layout_height="360dip"
				android:layout_width="fill_parent"
				android:scaleType="centerInside"
				android:maxWidth="400px"
				android:src="@drawable/goods_image_example"
			/>
			
			<!-- 分割线 -->
			
			<View 
				android:background="@drawable/goods_info_divider"
				android:clickable="true"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:minHeight="20dip"/>
				
			<TextView 
				android:id="@+id/goods_info_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginTop="5dip"
				android:textSize="16sp"
				android:textColor="@android:color/black"
				android:text="@string/goods_info_name"
			/>
			<TextView 
				android:id="@+id/goods_info_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginTop="5dip"
				android:textSize="16sp"
				android:textColor="@android:color/black"
				android:text="@string/goods_info_price"
			/>
			<TextView 
				android:id="@+id/goods_info_brand"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginTop="5dip"
				android:textSize="16sp"
				android:textColor="@android:color/black"
				android:text="@string/goods_info_producer"/>	
			<TextView 
				android:id="@+id/goods_info_attrs"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip"
				android:layout_marginTop="5dip"
				android:textSize="16sp"
				android:textColor="@android:color/black"
				android:text="@string/goods_info_intro"/>
					
			<ImageView
				android:layout_width="fill_parent"
				android:layout_marginTop="4dp"
				android:layout_height="wrap_content"
				android:src="@drawable/bg_thick_divider_3d"
			/>				
			<Button
				android:id="@+id/goods_info_add_to_cart"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:layout_marginBottom="15dp"
				android:layout_marginTop="4dip"
				android:text="@string/goods_info_add_to_cart"
				style="@style/blue_button_long2"
				android:visibility="gone"
			/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
