<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<include layout="@layout/navi_bar_back" />

	<ScrollView 
		android:background="#FFEFF0F4"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
	>

		<LinearLayout
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent"
			android:padding="15dp"
		>


			<!-- <RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				
			>
				商场图片
				<ImageView 
					android:id="@+id/market_info_image"
					android:layout_width="48dp" 
					android:layout_height="48dp"
					android:layout_alignParentLeft="true"
					android:layout_marginRight="10dp"
					android:src="@drawable/goods_image_example"
				/> -->

				<TextView
					android:id="@+id/market_info_name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
				
					style="@style/LinkText.Bold.Huge" 
				/>
			<!-- 	android:layout_toRightOf="@id/market_info_image"  -->
			<!-- </RelativeLayout> -->
			
			<!-- 商场信息 1 -->
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="5dp"
				android:text="@string/market_info_location"
			/>
			<TextView 
				android:id="@+id/market_info_location"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:background="@drawable/bg_panel"/>
			<!-- 商场信息 2 -->	
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="5dp"
				android:text="@string/market_info_intro"
			/>
			
			<TextView 
				android:id="@+id/market_info_intro"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:background="@drawable/bg_panel"
			/>
			<!-- 商场信息 3 -->	
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="5dp"
				android:text="@string/market_info_service_phone"
			/>
	
			<TextView 
				android:id="@+id/market_info_service_phone"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:background="@drawable/bg_panel"
			/>

			<!-- 商场信息 4 -->	
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="5dp"
				android:text="@string/market_info_complain_phone"
			/>
	
			<TextView
				android:id="@+id/market_info_complain_phone"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:background="@drawable/bg_panel"
			/>
			
			<!-- 商场信息 4 -->	
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="5dp"
				android:text="@string/market_info_create_date"
			/>
	
			<TextView 
				android:id="@+id/market_info_create_date"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:background="@drawable/bg_panel"
			/>
			
		</LinearLayout>
		
	</ScrollView>
	
</LinearLayout>
